<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfesoresFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo4"
        android:contentDescription="el fondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/kay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/profe1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/profe1"
                android:textColor="#eaeaea"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/profe2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/profe2"
                android:textColor="#eaeaea"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/profe3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/profe3"
                android:textColor="#eaeaea"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/profe4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/profe4"
                android:textColor="#eaeaea"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/profe5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/profe5"
                android:textColor="#eaeaea"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/profe6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/profe6"
                android:textColor="#eaeaea"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/profe7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/profe7"
                android:textColor="#eaeaea"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/profe8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/profe8"
                android:textColor="#eaeaea"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/profe9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/profe9"
                android:textColor="#eaeaea"
                android:textSize="30sp" />

        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>