<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MiInfoFragment"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo2"
        android:contentDescription="el fondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="131dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="41dp"
                app:layout_constraintBottom_toTopOf="@+id/scrollView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/mifoto"
                android:contentDescription="Mi foto"
                />

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nombres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:text="@string/nombres"
                        android:textSize="30sp"
                        android:textColor="#eaeaea"/>

                    <TextView
                        android:id="@+id/apellidos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:text="@string/apellidos"
                        android:textColor="#eaeaea"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/numeroCedula"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:text="@string/numeroCedula"
                        android:textSize="30sp"
                        android:textColor="#eaeaea"/>

                    <TextView
                        android:id="@+id/numeroUnico"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:text="@string/numeroUnico"
                        android:textSize="30sp"
                        android:textColor="#eaeaea"/>

                    <TextView
                        android:id="@+id/Teléfono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:text="@string/telefono"
                        android:textSize="30sp"
                        android:textColor="#eaeaea"/>

                    <TextView
                        android:id="@+id/correo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:text="@string/correo"
                        android:textSize="30sp"
                        android:textColor="#eaeaea" />

                    <TextView
                        android:id="@+id/correo2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:text="@string/correo2"
                        android:textSize="30sp"
                        android:textColor="#eaeaea" />

                    <TextView
                        android:id="@+id/facultad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:text="@string/facultad"
                        android:textSize="30sp"
                        android:textColor="#eaeaea"/>

                    <TextView
                        android:id="@+id/carrera"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:text="@string/carrera"
                        android:textSize="30sp"
                        android:textColor="#eaeaea" />
                </LinearLayout>


            </ScrollView>




        </android.support.constraint.ConstraintLayout>
    </FrameLayout>

</android.support.constraint.ConstraintLayout>